css & js link update

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="css/styles.css" />
+    <link rel="stylesheet" type="text/css" href="styles.css" />
 
     <title>Isaiah Frizzell Home</title>
 
@@ -164,6 +164,6 @@
 
 
 <!-- We place the javascript link at the bottom due to the way pages load, allowing for the content not to be delayed from the loading of these functions-->
-<script src=" js/topscripts.js "></script>
+<script src="topscripts.js "></script>
 
 </html>
