--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <div>
 
                     <p style="text-align:center " class="col ">
-                        <h2><strong>I design software and hardware in the spectacular<a href="https://en.wikipedia.org/wiki/Sawtooth_Range_(Idaho) "> mountains </a>of Idaho!</a></strong></h2>
+                        <h2><strong>I design software and hardware in the spectacular<a href="https://en.wikipedia.org/wiki/Sawtooth_Range_(Idaho)" target="_blank" rel="noopener noreferrer"> mountains </a>of Idaho!</a></strong></h2>
                     </p><br>
                     <p>As a working musician and sound designer, I'm also an avid running enthusiast in the hills and pristine mountain trails that surround me.<br> I view life education and edification as an aspect of health and have deliberately worked
                         and studied in as many industries as possible to exponentially increase my cache as a problem solver and developer, honing my strengths around the mental resource acquisition and synthesis that defines coding and innovation.<br>                        <br> Los Angeles is the paramount city of opportunity and 15 fruitful years there opened doors to excel in a strategic variety of trades surrounding media; from writing, directing, and producing films to designing marketing and
@@ -98,7 +98,7 @@
                         </ul>
                     </div>
                     <p id="contact">I work best with a team and thrive on feedback from them. Enjoy reaching out for a conversation with me on any topic and how to make that work online.</p><br>
-                    <p id="contact "><strong>Contact me here, via <a href="mailto:friah005@gmail.com ">email </a>, at <a href="https://www.linkedin.com/in/isaiah-frizzell-a171a3264/ ">linkedin </a>or on <a href="https://github.com/sauvingain ">Github!</a></strong>
+                    <p id="contact "><strong>Contact me here, via <a href="mailto:friah005@gmail.com ">email </a>, at <a href="https://www.linkedin.com/in/isaiah-frizzell-a171a3264/ " target="_blank" rel="noopener noreferrer">linkedin </a>or on <a href="https://github.com/sauvingain ">Github!</a></strong>
                     </p>
 
 
@@ -124,10 +124,10 @@
 
                     <p id="goals">My driving goal, indeed, the fire I stoke is in creating exciting methods to network musical systems within</p>
                     <ul class="col ">
-                        <li><a href="https://ethereum.org/en/developers/docs/web2-vs-web3/ ">Web2</a></li>
+                        <li><a href="https://ethereum.org/en/developers/docs/web2-vs-web3/ " target="_blank" rel="noopener noreferrer">Web2</a></li>
                         <li>&
                             <li>
-                                <li><a href="https://ethereum.org/en/web3/ ">Web3</a></li>
+                                <li><a href="https://ethereum.org/en/web3/ " target="_blank" rel="noopener noreferrer">Web3</a></li>
                     </ul>by using:</p>
                     <br>
                     <ul class="in ">
