--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
     <header>
         <div> <br>
-            <div class="ima"> <img src="images/banner.png" alt="Led hardware in the mountains cartoon" width="1000" height="341" /> </div> <br>
+            <div class="ima"> <img src="https://github.com/sauvingain/sauvingain.github.io/blob/main/banner.png?raw=true" alt="Led hardware in the mountains cartoon" width="1000" height="341" /> </div> <br>
             <div class="title">
                 <h1> <strong>Isaiah Frizzell</strong></h1>
                 <br>
