--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                         </ul>
                     </div>
                     <p id="contact">I work best with a team and thrive on feedback from them. Enjoy reaching out for a conversation with me on any topic and how to make that work online.</p><br>
-                    <p id="contact "><strong>Contact me here, via <a href="mailto:friah005@gmail.com ">email </a>, at <a href="https://www.linkedin.com/in/isaiah-frizzell-a171a3264/ " target="_blank" rel="noopener noreferrer">linkedin </a>or on <a href="https://github.com/sauvingain ">Github!</a></strong>
+                    <p id="contact "><strong>Contact me here, via <a href="mailto:friah005@gmail.com ">email </a>, at <a href="https://www.linkedin.com/in/isaiah-frizzell-a171a3264/ " target="_blank" rel="noopener noreferrer">linkedin </a>or on <a href="https://github.com/sauvingain" target="_blank" rel="noopener noreferrer">Github!</a></strong>
                     </p>
 
 
