--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
                     <p style="text-align:center " class="col ">
                         <h2><strong>I design software and hardware in the spectacular<a href="https://en.wikipedia.org/wiki/Sawtooth_Range_(Idaho)" target="_blank" rel="noopener noreferrer"> mountains </a>of Idaho!</a></strong></h2>
                     </p><br>
-                    <p>As a working musician and sound designer, I'm also an avid running enthusiast in the hills and pristine mountain trails that surround me.<br> I view life education and edification as an aspect of health and have deliberately worked
-                        and studied in as many industries as possible to exponentially increase my cache as a problem solver and developer, honing my strengths around the mental resource acquisition and synthesis that define coding and innovation.<br>                        <br> Los Angeles is the paramount city of opportunity and 15 fruitful years there opened doors to excel in a strategic variety of trades surrounding media; from writing, directing, and producing films to designing marketing and
-                        media campaigns. I still use my spare time to educate myself in new societal vectors and have quality experience in fields such as:
+                    <p>As a working musician and sound designer, I am an avid running enthusiast and conservationist in the hills and pristine mountain trails that surround me.<br> I view life education and edification as an aspect of health and have deliberately worked
+                        and studied in as many industries as possible to increase my cache as a problem solver and developer, honing my strengths around the mental resource acquisition and synthesis that define coding and innovation.<br> <br> Los Angeles is the paramount city of opportunity and 15 fruitful years there opened doors to excel in a strategic variety of trades surrounding media; from writing, directing, and producing films to designing marketing and
+                        media campaigns. I am poised to help your any business grow and communicate effectively on very diverse teams. I still use my spare time to educate myself in new societal vectors. I have deep, boots on the ground experience, have been published and won awards from some off the top media powerhouses in Los Angeles. My range of communication and understanding comes from working in fields as diverse as:
                     </p> <br>
                     <div class="in ">
                         <ul>
@@ -73,7 +73,7 @@
                             <li>Ghostwriting</li>
                             <li>Food Historian</li>
                             <li>Teaching</li>
-                            <li>Consultant</li>
+                            <li>Chef Consultant</li>
                         </ul>
 
                     </div>
