--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     </p><br>
                     <p>As a working musician and sound designer, I am an avid running enthusiast and conservationist in the hills and pristine mountain trails that surround me.<br> I view life education and edification as an aspect of health and have deliberately worked
                         and studied in as many industries as possible to increase my cache as a problem solver and developer, honing my strengths around the mental resource acquisition and synthesis that define coding and innovation.<br> <br> Los Angeles is the paramount city of opportunity and 15 fruitful years there opened doors to excel in a strategic variety of trades surrounding media; from writing, directing, and producing films to designing marketing and
-                        media campaigns. I am poised to help your any business grow and communicate effectively on very diverse teams. I still use my spare time to educate myself in new societal vectors. I have deep, boots on the ground experience, have been published and won awards from some off the top media powerhouses in Los Angeles. My range of communication and understanding comes from working in fields as diverse as:
+                        media campaigns. I am poised to help your business grow and communicate effectively with very diverse teams. I still use my spare time to educate myself in new societal vectors like machine learning, nervous system studies and coding languages. I have deep, boots on the ground, experience and have been published and won awards from some of the top media powerhouses in Los Angeles. My range of communication and team building comes from working in fields as diverse as:
                     </p> <br>
                     <div class="in ">
                         <ul>
@@ -81,7 +81,7 @@
 
                     <!-- I introduce my affiliation with Thinkful and let the viewer become aware of my desire to work with a team-->
 
-                    <p><br> Coding and sound come naturally to me. <br>Ultimately my focus is on writing efficient code to knit together sound design and technology for other's and my own business.</p>
+                    <p><br> Coding and sound come naturally to me. <br> I'm a builder and love the cerebral exercises of writing elegant codde. Ultimately my focus is on writing efficient code to knit together sound design and technology for other's and my own business.</p>
                     <p><strong>My passion for web design has led to a path of discovery and community at the excellent Thinkful academy!</strong></p>
                     <br>
                     <p> <strong><i></i>You're looking for a web developer with a huge quiver of skill sets?</strong></i><br>
