--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
                     <!-- I introduce my affiliation with Thinkful and let the viewer become aware of my desire to work with a team-->
 
-                    <p><br> Coding and sound come naturally to me. <br> I'm a builder and love the cerebral exercises of writing elegant codde. Ultimately my focus is on writing efficient code to knit together sound design and technology for other's and my own business.</p>
+                    <p><br> Coding and sound come naturally to me. <br> I'm a builder and love the cerebral gymnastics of writing elegant code. Ultimately my focus is on writing efficient code to knit together sound design and technology for other's and my own business.</p>
                     <p><strong>My passion for web design has led to a path of discovery and community at the excellent Thinkful academy!</strong></p>
                     <br>
                     <p> <strong><i></i>You're looking for a web developer with a huge quiver of skill sets?</strong></i><br>
