--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
             <section id="about"><br>
                 <h2><strong> Howdy, I'm Isaiah! </strong></h2>
                 <br>
+                <div class = "pic"> <a href = "https://github.com/sauvingain/sauvingain.github.io/pull/1#issue-1654337653"></a>
 
                 <hr class="solid ">
                 <br><br>
