--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
                 <hr class="solid ">
                 <br><br>
-                  <div class = "pic"> <a href = "https://github.com/sauvingain/sauvingain.github.io/pull/1#issue-1654337653" alt="Photo of Isaiah" width="1000" height="900"></a></div>          
+                  <div class = "pic"> <a href = "https://github.com/sauvingain/sauvingain.github.io/main/moi.jpg?raw=true" alt="Photo of Isaiah" width="1000" height="900"></a></div>          
 
 
                 <div>
