--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                     <p><br> Coding and sound come naturally to me. <br> I'm a builder and love the cerebral gymnastics of writing elegant code. Ultimately my focus is on using my experience and teamworking facility for writing efficient code. I would love to knit together sound design and technology for my business and work on a team for something bigger!</p>
                     <p><strong>My passion for web design has led to a path of discovery and community at the excellent Thinkful academy!</strong></p>
                     <br>
-                    <p> <strong><i></i>You're looking for a web developer with a huge quiver of skill sets?</strong></i><br>
+                    <p> <strong><i></i>You're looking for a web developer with a dynamic quiver of skill sets?</strong></i><br>
                         <p class="fnd">You've found the one!</p> <br><br> From my edifying experience at Thinkful to the fact that i've lived in many states as well as abroad in Mexico.
                     </p>
                     <p>I'm thrilled to hear from you so we can start the exciting work of creating new avenues for business exploration.</p>
