--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
 
                 <hr class="solid ">
                 <br><br>
-                  <div class = "pic"> <a href = "<img width="707" src="https://user-images.githubusercontent.com/108048461/229905501-dbdfe6d7-65a5-4ba9-946f-d9547f65fc02.png">
- alt="Photo of Isaiah" width="707" height="1200"></a></div>          
+                 <!-- <div class = "pic"> <a href = "<img width="707" src="https://user-images.githubusercontent.com/108048461/229905501-dbdfe6d7-65a5-4ba9-946f-d9547f65fc02.png">
+ alt="Photo of Isaiah" width="707" height="1200"></a></div> -->         
 
                 <div>
 
