--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="styles.css" />
+    <link rel="stylesheet" type="text/css" href="styles.css">
 
     <title>Isaiah Frizzell Home</title>
 
@@ -132,7 +132,7 @@
                                 <li><a href="https://ethereum.org/en/web3/ " target="_blank" rel="noopener noreferrer">Web3</a></li>
                     </ul>by using:</p>
                     <br>
-                    <ul class="in ">
+                    <ol class="in ">
                         <!--<li><Composing web portals that harmonize with the content</li>
                             <li>/*Aligning makers to
                                 <i>BUILDING the future!</i>
@@ -143,7 +143,7 @@
                         <li> External MIDI Instruments</li>
                         <li> Game Theory</li>
                         <li> Cryptocurrency Incentives</li>
-                    </ul> <br>
+                    </ol> <br>
                     <p> Collaboration and experimentation === how we instantiate novelty! </p>
                     <br>
                 </div>
