--- a/index.html
+++ b/index.html
@@ -132,7 +132,8 @@
                                 <li><a href="https://ethereum.org/en/web3/ " target="_blank" rel="noopener noreferrer">Web3</a></li>
                     </ul>by using:</p>
                     <br>
-                    <ol class="in2" list-style-type: disc>
+                    <div class = "in2">
+                    <ol list-style-type: disc>
                         <!--<li><Composing web portals that harmonize with the content</li>
                             <li>/*Aligning makers to
                                 <i>BUILDING the future!</i>
@@ -143,7 +144,7 @@
                         <li> External MIDI Instruments</li>
                         <li> Game Theory</li>
                         <li> Cryptocurrency Incentives</li>
-                    </ol> <br>
+                        </ol> </div><br>
                     <p> Collaboration and experimentation === how we instantiate novelty! </p>
                     <br>
                 </div>
