--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                                 <li><a href="https://ethereum.org/en/web3/ " target="_blank" rel="noopener noreferrer">Web3</a></li>
                     </ul>by using:</p>
                     <br>
-                    <div>
+                    <div class = "center">
                     <ol>
                         <!--<li><Composing web portals that harmonize with the content</li>
                             <li>/*Aligning makers to
