--- a/index.html
+++ b/index.html
@@ -18,14 +18,12 @@
 <body>
     <header>
         <div> <br>
-            <div class="ima"> <img src="https://github.com/sauvingain/sauvingain.github.io/blob/main/banner.png?raw=true" alt="Led hardware in the mountains cartoon" width="1000" height="341" /> </div> <br>
+            <div class="ima"> <img src="https://github.com/sauvingain/sauvingain.github.io/blob/main/banner.png?raw=true" alt="Led hardware in the mountains cartoon" width="1000" height="341"> </div> <br>
             <div class="title">
                 <h1> <strong>Isaiah Frizzell</strong></h1>
                 <br>
                 <p>
                     <h2><strong>Boutique Software & Hardware Design</strong></h2><br>
-
-                    </h3>
                 </p>
             </div>
         </div>
@@ -42,7 +40,6 @@
                 </nav>
             </div>
         </article>
-        </div>
         <br>
     </header>
 
@@ -62,7 +59,7 @@
                 <div>
 
                     <p style="text-align:center " class="col ">
-                        <h2><strong>I design software and hardware in the spectacular<a href="https://en.wikipedia.org/wiki/Sawtooth_Range_(Idaho)" target="_blank" rel="noopener noreferrer"> mountains </a>of Idaho!</a></strong></h2>
+                        <h2><strong>I design software and hardware in the spectacular<a href="https://en.wikipedia.org/wiki/Sawtooth_Range_(Idaho)" target="_blank" rel="noopener noreferrer"> mountains </a>of Idaho!</strong></h2>
                     </p><br>
                     <p>As a working musician and sound designer, I am an avid running enthusiast and conservationist in the hills and pristine mountain trails that surround me.<br> I view life education and edification as an aspect of health and have deliberately worked
                         and studied in as many industries as possible to increase my cache as a problem solver and developer, honing my strengths around the mental resource acquisition and synthesis that define coding and innovation.<br> <br> Los Angeles is the paramount city of opportunity and 15 fruitful years there opened doors to excel in a strategic variety of trades surrounding media; from writing, directing, and producing films to designing marketing and
@@ -86,13 +83,13 @@
                     <p><br> Coding and sound come naturally to me. <br> I'm a builder and love the cerebral gymnastics of writing elegant code. Ultimately my focus is on using my experience and teamworking facility for writing efficient code. I would love to knit together sound design and technology for my business and work on a team for something bigger!</p>
                     <p><strong>My passion for web design has led to a path of discovery and community at the excellent Thinkful academy!</strong></p>
                     <br>
-                    <p> <strong><i></i>You're looking for a web developer with a dynamic quiver of skill sets?</strong></i><br>
+                    <p> <strong><i><You're looking for a web developer with a dynamic quiver of skill sets?</strong></i><br>
                         <p class="fnd">You've found the one!</p> <br><br> From my edifying experience at Thinkful to the fact that i've lived in many states as well as abroad in Mexico.
                     </p>
                     <p>I'm thrilled to hear from you so we can start the exciting work of creating new avenues for business exploration.</p>
                     <p><strong>I'm dedicated to helping more people unite and collaborate on code that is:</strong></p>
                     <div class="navv2 ">
-                        <ul style="inline ">
+                        <ul>
                             <li>Useful</li>
                             <li>Efficient</li>
                             <li>Novel</li>
@@ -100,14 +97,14 @@
                         </ul>
                     </div>
                     <p id="contact">I work best with a team and thrive on feedback from them. Enjoy reaching out for a conversation with me on any topic and how to make that work online.</p><br>
-                    <p class="arrow" id="contact"><strong>Contact me here:</p> <span><a href="mailto:friah005@gmail.com ">Email </a>, at <a href="https://www.linkedin.com/in/isaiah-frizzell-a171a3264/ " target="_blank" rel="noopener noreferrer">linkedin </a>or on <a href="https://github.com/sauvingain" target="_blank" rel="noopener noreferrer">Github!</a></strong></span>
+                        <p class="arrow"><strong>Contact</strong> me here:</p> <span><strong><a href="mailto:friah005@gmail.com ">Email </a>, at <a href="https://www.linkedin.com/in/isaiah-frizzell-a171a3264/ " target="_blank" rel="noopener noreferrer">linkedin </a>or on <a href="https://github.com/sauvingain" target="_blank" rel="noopener noreferrer">Github!</a></strong></span>
 
 
-                    </p> <br>I adamantly believe in the wisdom of the phrase:<br><br>
+                     <br>I adamantly believe in the wisdom of the phrase:<br><br>
                     <div class="ital "><i>If you build it, they will come! </i><br><br> </i>
                     </div>
-                    <p class="col "><strong>Let's face it:<br><i>Market saturation is largely a MYTH</i></strong><br><br>There is generally room for improvement...<br><i>until there isn't.</i></p>
-                    <p>Do we guild the lily? Well...<br>maybe if the Adafruit Lily needs actual gold gilding<span>&#x1F609</span></p>
+                    <p class="col "><strong>Let's face it:<br><i>Market saturation is largely a MYTH</i></strong></p><br><br><i>There is generally room for improvement...<br><i>until there isn't.</i></p>
+                    <p>Do we guild the lily? Well...<br>maybe if the Adafruit Lily needs actual gold gilding<span>&#x1F609;</span></p>
                     <!-- This was an earlier list I decided to keep in case of future use and refactoring 
                         <p> I thrive off of:</p>
                     <div>
@@ -129,7 +126,7 @@
                         <li>&
                             <li>
                                 <li><a href="https://ethereum.org/en/web3/ " target="_blank" rel="noopener noreferrer">Web3</a></li>
-                    </ul>by using:</p>
+                    </ul><p>by using:</p>
                     <br>
                     <div class = "center">
                     <ol>
@@ -147,9 +144,6 @@
                     <p> Collaboration and experimentation === how we instantiate novelty! </p>
                     <br>
                 </div>
-                </div>
-
-
             </section>
         </article>
     </main>
