--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                     <p><br> Coding and sound come naturally to me. <br> I'm a builder and love the cerebral gymnastics of writing elegant code. Ultimately my focus is on using my experience and teamworking facility for writing efficient code. I would love to knit together sound design and technology for my business and work on a team for something bigger!</p>
                     <p><strong>My passion for web design has led to a path of discovery and community at the excellent Thinkful academy!</strong></p>
                     <br>
-                    <p> <strong><i><You're looking for a web developer with a dynamic quiver of skill sets?</strong></i><br>
+                    <p> <strong><i><You're looking for a web developer with a dynamic quiver of skill sets?</i></strong><br></p>
                         <p class="fnd">You've found the one!</p> <br><br> From my edifying experience at Thinkful to the fact that i've lived in many states as well as abroad in Mexico.
                     </p>
                     <p>I'm thrilled to hear from you so we can start the exciting work of creating new avenues for business exploration.</p>
@@ -103,7 +103,10 @@
                      <br>I adamantly believe in the wisdom of the phrase:<br><br>
                     <div class="ital "><i>If you build it, they will come! </i><br><br> </i>
                     </div>
-                    <p class="col "><strong>Let's face it:<br><i>Market saturation is largely a MYTH</i></strong></p><br><br><i>There is generally room for improvement...<br><i>until there isn't.</i></p>
+                         <p class="col "><strong>Let's face it:</p> br>
+                       <p class = "col"><strong> <i>Market saturation is largely a MYTH</i></strong></p>
+                            <br><br><p class = "col"><i>There is generally room for improvement...</p>
+                                    <p class = "col"> <i>until there isn't.</i></p>
                     <p>Do we guild the lily? Well...<br>maybe if the Adafruit Lily needs actual gold gilding<span>&#x1F609;</span></p>
                     <!-- This was an earlier list I decided to keep in case of future use and refactoring 
                         <p> I thrive off of:</p>
