--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                     </p>
                     <p>I'm thrilled to hear from you so we can start the exciting work of creating new avenues for business exploration.</p>
                     <p><strong>I'm dedicated to helping more people unite and collaborate on code that is:</strong></p>
-                    <div class="navv2 ">
+                    <div class="navv2">
                         <ul>
                             <li>Useful</li>
                             <li>Efficient</li>
@@ -101,11 +101,12 @@
 
 
                      <br>I adamantly believe in the wisdom of the phrase:<br><br>
-                    <div class="ital "><i>If you build it, they will come! </i><br><br> </i>
-                    </div>
-                         <p class="col "><strong>Let's face it:</p> br>
+                    <div class="ita"><i>If you build it, they will come! </i> </div>
+                            <br><br>
+                        <p class="col "><strong>Let's face it:</strong></p> br>
                        <p class = "col"><strong> <i>Market saturation is largely a MYTH</i></strong></p>
-                            <br><br><p class = "col"><i>There is generally room for improvement...</p>
+                            <br><br>
+                                    <p class = "col"><i>There is generally room for improvement...</i></p>
                                     <p class = "col"> <i>until there isn't.</i></p>
                     <p>Do we guild the lily? Well...<br>maybe if the Adafruit Lily needs actual gold gilding<span>&#x1F609;</span></p>
                     <!-- This was an earlier list I decided to keep in case of future use and refactoring 
