--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
             <div class="title">
                 <h1> <strong>Isaiah Frizzell</strong></h1>
                 <br>
-                <p>
+               
                     <h2><strong>Boutique Software & Hardware Design</strong></h2><br>
-                </p>
+              
             </div>
         </div>
         <br>
@@ -83,8 +83,8 @@
                     <p><br> Coding and sound come naturally to me. <br> I'm a builder and love the cerebral gymnastics of writing elegant code. Ultimately my focus is on using my experience and teamworking facility for writing efficient code. I would love to knit together sound design and technology for my business and work on a team for something bigger!</p>
                     <p><strong>My passion for web design has led to a path of discovery and community at the excellent Thinkful academy!</strong></p>
                     <br>
-                    <p> <strong><i><You're looking for a web developer with a dynamic quiver of skill sets?</i></strong><br></p>
-                        <p class="fnd">You've found the one!</p> <br><br> From my edifying experience at Thinkful to the fact that i've lived in many states as well as abroad in Mexico.
+                    <p> <strong><i>You're looking for a web developer with a dynamic quiver of skill sets?</i></strong></p><br>
+                        <p class="fnd">You've found the one!</p> <br><br> <p>From my edifying experience at Thinkful to the fact that i've lived in many states as well as abroad in Mexico.
                     </p>
                     <p>I'm thrilled to hear from you so we can start the exciting work of creating new avenues for business exploration.</p>
                     <p><strong>I'm dedicated to helping more people unite and collaborate on code that is:</strong></p>
