--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
                  <!-- <div class = "pic"> <a href = "<img width="707" src="https://user-images.githubusercontent.com/108048461/229905501-dbdfe6d7-65a5-4ba9-946f-d9547f65fc02.png">
  alt="Photo of Isaiah" width="707" height="1200"></a></div> -->         
 
-                <div>
+                <div style="text-align:center" class="col">
 
-                    <p style="text-align:center " class="col ">
+                    <!-- <p style="text-align:center " class="col "> -->
                         <h2><strong>I design software and hardware in the spectacular<a href="https://en.wikipedia.org/wiki/Sawtooth_Range_(Idaho)" target="_blank" rel="noopener noreferrer"> mountains </a>of Idaho!</strong></h2>
-                    </p><br>
+                    <br>
                     <p>As a working musician and sound designer, I am an avid running enthusiast and conservationist in the hills and pristine mountain trails that surround me.<br> I view life education and edification as an aspect of health and have deliberately worked
                         and studied in as many industries as possible to increase my cache as a problem solver and developer, honing my strengths around the mental resource acquisition and synthesis that define coding and innovation.<br> <br> Los Angeles is the paramount city of opportunity and 15 fruitful years there opened doors to excel in a strategic variety of trades surrounding media; from writing, directing, and producing films to designing marketing and
                         media campaigns. I am poised to help your business grow and communicate effectively with very diverse teams. I still use my spare time to educate myself in new societal vectors like machine learning, nervous system studies and coding languages. I have deep, boots on the ground, experience and have been published and won awards from some of the top media powerhouses in Los Angeles. My range of communication and team building comes from working in fields as diverse as:
@@ -103,9 +103,9 @@
                      <br>I adamantly believe in the wisdom of the phrase:<br><br>
                     <div class="ita"><i>If you build it, they will come! </i> </div>
                             <br><br>
-                        <p class="col "><strong>Let's face it:</strong></p> br>
+                        <p class="col "><strong>Let's face it:</strong></p>
                        <p class = "col"><strong> <i>Market saturation is largely a MYTH</i></strong></p>
-                            <br><br>
+                            <br>
                                     <p class = "col"><i>There is generally room for improvement...</i></p>
                                     <p class = "col"> <i>until there isn't.</i></p>
                     <p>Do we guild the lily? Well...<br>maybe if the Adafruit Lily needs actual gold gilding<span>&#x1F609;</span></p>
@@ -159,11 +159,11 @@
     </footer>
     <br>
 
-
+<script src="topscripts.js"></script>
 </body>
 
 
 <!-- We place the javascript link at the bottom due to the way pages load, allowing for the content not to be delayed from the loading of these functions-->
-<script src="topscripts.js "></script>
+
 
 </html>
