--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </div>
         <br>
         <!-- A nav that links on page to my relevant info -->
-        <article class="art">
+        <div class="art">
             <div>
                 <nav style="text-align:center">
                     <ul>
@@ -39,13 +39,13 @@
                     </ul>
                 </nav>
             </div>
-        </article>
+        </div>
         <br>
     </header>
 
     <!-- A section about who I am -->
     <main>
-        <article>
+        <div>
             <section id="about"><br>
                 <h2><strong> Howdy, I'm Isaiah! </strong></h2>
                 <br>
@@ -149,7 +149,7 @@
                     <br>
                 </div>
             </section>
-        </article>
+        </div>
     </main>
 
     <!-- Often headers and footers are on their own pages to be linked to in larger sites, fulfilling maximum Separation of Concerns-->
