--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                  <!-- <div class = "pic"> <a href = "<img width="707" src="https://user-images.githubusercontent.com/108048461/229905501-dbdfe6d7-65a5-4ba9-946f-d9547f65fc02.png">
  alt="Photo of Isaiah" width="707" height="1200"></a></div> -->         
 
-                <div style="text-align:center" class="col">
+                <div style="text-align:center">
 
                     <!-- <p style="text-align:center " class="col "> -->
                         <h2><strong>I design software and hardware in the spectacular<a href="https://en.wikipedia.org/wiki/Sawtooth_Range_(Idaho)" target="_blank" rel="noopener noreferrer"> mountains </a>of Idaho!</strong></h2>
