--- a/index.html
+++ b/index.html
@@ -81,11 +81,10 @@
                     <!-- I introduce my affiliation with Thinkful and let the viewer become aware of my desire to work with a team-->
 
                     <p><br> Coding and sound come naturally to me. <br> I'm a builder and love the cerebral gymnastics of writing elegant code. Ultimately my focus is on using my experience and teamworking facility for writing efficient code. I would love to knit together sound design and technology for my business and work on a team for something bigger!</p>
-                    <p><strong>My passion for web design has led to a path of discovery and community at the excellent Thinkful academy!</strong></p>
+                    <p><strong>My passion for web an sound design has led to a path of discovery and community in remote Idaho!</strong></p>
                     <br>
                     <p> <strong><i>You're looking for a web developer with a dynamic quiver of skill sets?</i></strong></p><br>
-                        <p class="fnd">You've found the one!</p> <br><br> <p>From my edifying experience at Thinkful to the fact that i've lived in many states as well as abroad in Mexico.
-                    </p>
+                        <p class="fnd">You've found the one!</p> <br><br> 
                     <p>I'm thrilled to hear from you so we can start the exciting work of creating new avenues for business exploration.</p>
                     <p><strong>I'm dedicated to helping more people unite and collaborate on code that is:</strong></p>
                     <div class="navv2">
@@ -109,14 +108,7 @@
                                     <p class = "col"><i>There is generally room for improvement...</i></p>
                                     <p class = "col"> <i>until there isn't.</i></p>
                     <p>Do we guild the lily? Well...<br>maybe if the Adafruit Lily needs actual gold gilding<span>&#x1F609;</span></p>
-                    <!-- This was an earlier list I decided to keep in case of future use and refactoring 
-                        <p> I thrive off of:</p>
-                    <div>
-                        <ul class="in ">
-                            <li>Creating Community</li>
-                            <li>Performance</li>
-                            <li>Invention</li>
-                        </ul>  -->
+                   
                     <br><br>
                     <!-- Line breaks are beautiful and help notify the viewer of content structuring-->
                     <hr class="solid ">
@@ -134,11 +126,7 @@
                     <br>
                     <div class = "center">
                     <ol>
-                        <!--<li><Composing web portals that harmonize with the content</li>
-                            <li>/*Aligning makers to
-                                <i>BUILDING the future!</i>
-                            </li>
-                            <li>Accurate and efficient code makes the World Wide Web go 'round</li> -->
+                       
                         <li>Blockchain</li>
                         <li> Generative Music Code</li>
                         <li> External MIDI Instruments</li>
